# Minicards

./: .gitignore  CMakeLists.txt  ConfigureEmscripten.bat  ConfigureMinGW.bat
src/: CardGame.cpp  CardGame.h  Game.cpp  Game.h  MiniCards.cpp  MiniCards.h  MiniCards.ino  Styx.cpp  Styx.h  Styx_RaylibImpl.cpp  Styx_RaylibImpl.h
